# polytech-AIP-course

./: .gitignore  CMakeLists.txt  create_cmakelist.py
Task 1/: 1.0.1.cpp  1.0.2.cpp  1.1.cpp  1.2.cpp  1.3.cpp  Тема 1 - Формирование детальных требований.docx
Task 10/: 10.cpp  Тема 10 - Ряд Тейлора.docx
Task 11/: 11.1.cpp  11.2.cpp  Point.cpp  Point.h  Triangle.cpp  Triangle.h  Тема 11 - ООП.docx
Task 12/: 12.cpp  base-types.h  base_types.cpp  base_types.h  circle.cpp  circle.h  compositeshape.cpp  compositeshape.h  input.txt  rectangle.cpp  rectangle.h  shape.cpp  shape.h  Тема 12 - Геометрические фигуры.docx
Task 13/: 13.cpp  String.cpp  String.h  Тема 13 - Работа со строками.docx
Task 2/: 2.0.1.cpp  2.0.2.cpp  2.1.cpp  2.2.cpp  Тема 2 - Операторы ветвления и логические операции.docx
Task 3/: 3.cpp  Тема 3 - Последовательности.docx
Task 4/: 4.1.cpp  4.2.cpp  Тема 4 - Циклы.docx
Task 5/: 5.1.cpp  5.2.1.cpp  5.2.2.cpp  arrays.txt  Тема 5 - Функции.docx
Task 6/: 6.1.cpp  6.cpp  arrays.txt  Тема 6 - Одномерные массивы.docx
Task 7/: 7.cpp  strings.txt  Тема 7 - Строки в стиле С.docx
Task 8/: 8.1.cpp  8.2.cpp  Тема 8 - Двумерные массивы. Указатели. Метод «сверху вниз».docx
Task 9/: 9.cpp  Тема 9 - Рекурсия.docx
