cmake_minimum_required(VERSION 3.3)
project(Polytech_AIP)

set(CMAKE_CXX_STANDARD 14)


set(BUILD_1 1.0.1.cpp)
set(SOURCE_FILES_1 "Task 1/1.0.1.cpp")
add_executable(${BUILD_1} ${SOURCE_FILES_1})

set(BUILD_2 1.0.2.cpp)
set(SOURCE_FILES_2 "Task 1/1.0.2.cpp")
add_executable(${BUILD_2} ${SOURCE_FILES_2})

set(BUILD_3 1.1.cpp)
set(SOURCE_FILES_3 "Task 1/1.1.cpp")
add_executable(${BUILD_3} ${SOURCE_FILES_3})

set(BUILD_4 1.2.cpp)
set(SOURCE_FILES_4 "Task 1/1.2.cpp")
add_executable(${BUILD_4} ${SOURCE_FILES_4})

set(BUILD_5 1.3.cpp)
set(SOURCE_FILES_5 "Task 1/1.3.cpp")
add_executable(${BUILD_5} ${SOURCE_FILES_5})

set(BUILD_6 2.0.1.cpp)
set(SOURCE_FILES_6 "Task 2/2.0.1.cpp")
add_executable(${BUILD_6} ${SOURCE_FILES_6})

set(BUILD_7 2.0.2.cpp)
set(SOURCE_FILES_7 "Task 2/2.0.2.cpp")
add_executable(${BUILD_7} ${SOURCE_FILES_7})

set(BUILD_8 2.1.cpp)
set(SOURCE_FILES_8 "Task 2/2.1.cpp")
add_executable(${BUILD_8} ${SOURCE_FILES_8})

set(BUILD_9 2.2.cpp)
set(SOURCE_FILES_9 "Task 2/2.2.cpp")
add_executable(${BUILD_9} ${SOURCE_FILES_9})

set(BUILD_10 3.cpp)
set(SOURCE_FILES_10 "Task 3/3.cpp")
add_executable(${BUILD_10} ${SOURCE_FILES_10})

set(BUILD_11 4.1.cpp)
set(SOURCE_FILES_11 "Task 4/4.1.cpp")
add_executable(${BUILD_11} ${SOURCE_FILES_11})

set(BUILD_12 4.2.cpp)
set(SOURCE_FILES_12 "Task 4/4.2.cpp")
add_executable(${BUILD_12} ${SOURCE_FILES_12})

set(BUILD_13 5.1.cpp)
set(SOURCE_FILES_13 "Task 5/5.1.cpp")
add_executable(${BUILD_13} ${SOURCE_FILES_13})

set(BUILD_14 5.2.1.cpp)
set(SOURCE_FILES_14 "Task 5/5.2.1.cpp")
add_executable(${BUILD_14} ${SOURCE_FILES_14})

set(BUILD_15 6.1.cpp)
set(SOURCE_FILES_15 "Task 6/6.1.cpp")
add_executable(${BUILD_15} ${SOURCE_FILES_15})

set(BUILD_16 6.cpp)
set(SOURCE_FILES_16 "Task 6/6.cpp")
add_executable(${BUILD_16} ${SOURCE_FILES_16})

set(BUILD_17 7.cpp)
set(SOURCE_FILES_17 "Task 7/7.cpp")
add_executable(${BUILD_17} ${SOURCE_FILES_17})

set(BUILD_18 8.1.cpp)
set(SOURCE_FILES_18 "Task 8/8.1.cpp")
add_executable(${BUILD_18} ${SOURCE_FILES_18})

set(BUILD_19 8.2.cpp)
set(SOURCE_FILES_19 "Task 8/8.2.cpp")
add_executable(${BUILD_19} ${SOURCE_FILES_19})

set(BUILD_20 9.cpp)
set(SOURCE_FILES_20 "Task 9/9.cpp")
add_executable(${BUILD_20} ${SOURCE_FILES_20})
